// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/create-atomic-component when called in an existing project should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "/EUyu6gVZlO8FrKPYi4T6pPEZOI=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "cdn.js",
                    },
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "index.cjs.js",
                    },
                    HashedFile {
                      "hash": "EejgXD4itDHQkcSB+rkduaK6i3w=",
                      "name": "index.d.ts",
                    },
                    HashedFile {
                      "hash": "AVg2xEIhlYFa1JdLuHECP4RcRwg=",
                      "name": "index.es2017.js",
                    },
                    HashedFile {
                      "hash": "orpFM4J34T2gX7c3vGiovp0rdxM=",
                      "name": "index.js",
                    },
                    HashedFile {
                      "hash": "WNqwx6y7/TKh0xE/ENZlA00Dy/g=",
                      "name": "package.json",
                    },
                  ],
                  "hash": "sKeQkO8VgbsjZXr6tkSU30MvP5c=",
                  "name": "loader",
                },
                HashedFile {
                  "hash": "g8gXhUi3u1qKSISgPE7DaDXgvdM=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "WFKEtKRjGLss7reJoQgrfDZD190=",
                      "name": "components.d.ts",
                    },
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "oh-wow-another-component-can-you-believe-it.css",
                    },
                    HashedFile {
                      "hash": "cyiSAzblslLaM9FtFOxZflhDW5E=",
                      "name": "oh-wow-another-component-can-you-believe-it.tsx",
                    },
                    HashedFile {
                      "hash": "0paD+lp3fCIv4J/d+YrJ6gkGSbo=",
                      "name": "readme.md",
                    },
                  ],
                  "hash": "6L6nNkxq3tQGEN3Ry1rK0ec3Vo4=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "o9YKfEbt+v+8F6aGow448/oNGIs=",
              "name": "oh-wow-another-component-can-you-believe-it",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "4GBzmT23IZbVlIkSTj/Y4gXMvu4=",
                  "name": "results-manager.tsx",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "ZCdogTMu76bIdVmdiP4HFc12PuE=",
                      "name": "blog-template.html",
                    },
                    HashedFile {
                      "hash": "4FjTi/uzZiAAERCfcP/ywqcBf0o=",
                      "name": "chatter-template.html",
                    },
                    HashedFile {
                      "hash": "giLYgtBFNPaHhaoHTyN5qn8PeOw=",
                      "name": "default-template.html",
                    },
                    HashedFile {
                      "hash": "kGHLbriGMNQRyMJljhx0H+jIvws=",
                      "name": "youtube-template.html",
                    },
                  ],
                  "hash": "BMSWSBo1844anERajOlybuqYgBs=",
                  "name": "templates",
                },
              ],
              "hash": "eO3zCa8M6YsI7Cbub5iUEBJCep4=",
              "name": "results-manager",
            },
          ],
          "hash": "3k4KyvHD8k6ASA04K+EgI5KkzpU=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "IT6YDPas7Eg32ghedV3MYYM0PjQ=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "vn3KIdltSQ2KzuQYz3v9PEpBqdY=",
          "name": "pages",
        },
      ],
      "hash": "H9Y8SLaHJnU2Z6xPW2jXjAyU3Cs=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "tjcdNTELEWwiw20JLKBKzn+KXr0=",
  "name": "no-args",
}
`;

exports[`@coveo/create-atomic-component when called with a component name without hyphen should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "/EUyu6gVZlO8FrKPYi4T6pPEZOI=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "LNbFiNRpM3v2ebCr0aTR8uCOcEw=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "atomic-nohypen.css",
                    },
                    HashedFile {
                      "hash": "tS25lkQb7dlQXKxuykh6R0/CIPo=",
                      "name": "atomic-nohypen.tsx",
                    },
                  ],
                  "hash": "Zd4hjEzrsZbYZVpDMlMpAGTqMoI=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "UJDAEoTNOxhfyRQKH8IHmHRJ+0E=",
              "name": "atomic-nohypen",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "4GBzmT23IZbVlIkSTj/Y4gXMvu4=",
                  "name": "results-manager.tsx",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "ZCdogTMu76bIdVmdiP4HFc12PuE=",
                      "name": "blog-template.html",
                    },
                    HashedFile {
                      "hash": "4FjTi/uzZiAAERCfcP/ywqcBf0o=",
                      "name": "chatter-template.html",
                    },
                    HashedFile {
                      "hash": "giLYgtBFNPaHhaoHTyN5qn8PeOw=",
                      "name": "default-template.html",
                    },
                    HashedFile {
                      "hash": "kGHLbriGMNQRyMJljhx0H+jIvws=",
                      "name": "youtube-template.html",
                    },
                  ],
                  "hash": "BMSWSBo1844anERajOlybuqYgBs=",
                  "name": "templates",
                },
              ],
              "hash": "eO3zCa8M6YsI7Cbub5iUEBJCep4=",
              "name": "results-manager",
            },
          ],
          "hash": "4xycW3OXqDSIRzkv/9n8FD/qkvE=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "IT6YDPas7Eg32ghedV3MYYM0PjQ=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "vn3KIdltSQ2KzuQYz3v9PEpBqdY=",
          "name": "pages",
        },
      ],
      "hash": "n7qIGvbjglmbx/fHd1RU8cIOTls=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "DdVODx9Ggf+q02Vfe9kl1uagF3E=",
  "name": "invalid-arg",
}
`;

exports[`@coveo/create-atomic-component when called with a valid component name should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "/EUyu6gVZlO8FrKPYi4T6pPEZOI=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "4GBzmT23IZbVlIkSTj/Y4gXMvu4=",
                  "name": "results-manager.tsx",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "ZCdogTMu76bIdVmdiP4HFc12PuE=",
                      "name": "blog-template.html",
                    },
                    HashedFile {
                      "hash": "4FjTi/uzZiAAERCfcP/ywqcBf0o=",
                      "name": "chatter-template.html",
                    },
                    HashedFile {
                      "hash": "giLYgtBFNPaHhaoHTyN5qn8PeOw=",
                      "name": "default-template.html",
                    },
                    HashedFile {
                      "hash": "kGHLbriGMNQRyMJljhx0H+jIvws=",
                      "name": "youtube-template.html",
                    },
                  ],
                  "hash": "BMSWSBo1844anERajOlybuqYgBs=",
                  "name": "templates",
                },
              ],
              "hash": "eO3zCa8M6YsI7Cbub5iUEBJCep4=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "cPDxLRM3GmHsAF9t9RIgoin/rc0=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "YZICfNAhO7c4mopg1lRMvtn4zoc=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "GPCobV/2HmZJ0cpyuZQf9TQeVf8=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "iRbYc3vr7A6RQb2UY9F/lE/DLiM=",
              "name": "valid-component-name",
            },
          ],
          "hash": "o43yJWycsKWoDGNYE8k5R1JT+qs=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "IT6YDPas7Eg32ghedV3MYYM0PjQ=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "vn3KIdltSQ2KzuQYz3v9PEpBqdY=",
          "name": "pages",
        },
      ],
      "hash": "Vsk2cQuyf73QcCAx0JFM5fRiaIw=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "qv468iljuirF/PSZAMAfV04d8GU=",
  "name": "valid-arg",
}
`;

exports[`@coveo/create-atomic-component when called without any args should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "/EUyu6gVZlO8FrKPYi4T6pPEZOI=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "4GBzmT23IZbVlIkSTj/Y4gXMvu4=",
                  "name": "results-manager.tsx",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "ZCdogTMu76bIdVmdiP4HFc12PuE=",
                      "name": "blog-template.html",
                    },
                    HashedFile {
                      "hash": "4FjTi/uzZiAAERCfcP/ywqcBf0o=",
                      "name": "chatter-template.html",
                    },
                    HashedFile {
                      "hash": "giLYgtBFNPaHhaoHTyN5qn8PeOw=",
                      "name": "default-template.html",
                    },
                    HashedFile {
                      "hash": "kGHLbriGMNQRyMJljhx0H+jIvws=",
                      "name": "youtube-template.html",
                    },
                  ],
                  "hash": "BMSWSBo1844anERajOlybuqYgBs=",
                  "name": "templates",
                },
              ],
              "hash": "eO3zCa8M6YsI7Cbub5iUEBJCep4=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "84SD+p+GczYsspBeCWLlmS5U1Uo=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "sample-component.css",
                    },
                    HashedFile {
                      "hash": "5oFqFve0WaOV3g/ptfVo98a5B4Q=",
                      "name": "sample-component.tsx",
                    },
                  ],
                  "hash": "65UuO8iiPnNRHZur5KT+HoQqFCw=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "sdh3EoJD2v1IIkJTB/xCDKjF/bg=",
              "name": "sample-component",
            },
          ],
          "hash": "kP/nz+0YLsFn1SWTLcSlhTKbqPI=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "IT6YDPas7Eg32ghedV3MYYM0PjQ=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "vn3KIdltSQ2KzuQYz3v9PEpBqdY=",
          "name": "pages",
        },
      ],
      "hash": "5ar665NvJtRfwpZMl/Xcv/+crMA=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "01mWkkXiapWhwoqihV91GklisZE=",
  "name": "no-args",
}
`;
